# Calculation-Terminator

./: .gitignore  Calculation-Terminator 操作说明书.html  Calculation-Terminator 操作说明书.md  LICENSE  README.md  document.html  pyproject.toml  requirements.txt
src/: start.bat
src/calcterm/: __main__.py  test_calc.py
src/calcterm/app/: config.py  main_window.py  namespacemgmt.py
src/calcterm/core/: calc.py  exception_parser.py  latex.py  latex_override_class.py  struct_template.py
src/calcterm/widgets/: common.py  latex_display.py
